syntax = "proto3";

import "github.com/iost-official/go-iost/crypto/signature.proto";
import "github.com/iost-official/go-iost/core/tx/tx.proto";
package block;

enum BlockType{
    NORMAL = 0;
    ONLYHASH = 1;
}

message BlockHead {
    int64 version = 1;
    bytes parentHash = 2;
    bytes txsHash = 3;
    bytes merkleHash = 4;
    bytes info = 5;
    int64 number = 6;
    string witness = 7;
    int64 time = 8;
}

message BlockRaw {
    BlockHead head = 1;
    crypto.SignatureRaw sign = 2;
    repeated tx.TxRaw txs = 3;
    repeated tx.TxReceiptRaw receipts = 4;
    repeated bytes txHashes = 5;
    repeated bytes receiptHashes =6;
    BlockType blockType = 7;
}

