syntax = "proto3";

import "verifier/verifier.proto";
package tx;

message ActionRaw {
    string contract = 1;
    string actionName = 2;
    string data = 3;
}

message TxRaw {
    int64 time = 1;
    int64 expiration = 2;
    int64 gasLimit = 3;
    int64 gasPrice = 4;
    repeated ActionRaw actions = 5;
    repeated bytes signers = 6;
    repeated common.SignatureRaw signs = 7;
    common.SignatureRaw publisher = 8;
}

message ReceiptRaw {
    int32 type = 1;
    string content = 2;
}

message StatusRaw {
    int32 code = 1;
    string message = 2;
}

message TxReceiptRaw {
    bytes txHash = 1;
    int64 gasUsage = 2;
    StatusRaw status = 3;
    int32 succActionNum = 4;
    repeated ReceiptRaw receipts = 5;
}
